# Artiq_VM

./: README.md
Experiments/Experiments/: README.md  flake.nix
Experiments/Experiments/myrtioext/: flake.nix  pyproject.toml
Experiments/Experiments/myrtioext/myrtioext/: __init__.py
Experiments/Experiments/myrtioext/myrtioext/gateware/: or_to_led.py
Experiments/Thermostat/: Connection_test.ipynb  README.MD  requirements.txt  server.py
Experiments/myrtioext/: flake.nix  pyproject.toml
Experiments/myrtioext/myrtioext/: flake.nix.back
Experiments/myrtioext/myrtioext/coredevice/: or_to_led.py
Kasli_SoC_Debugger/: jtag_reader.py
img/: Untitled Diagram.drawio
src/Node 1/: device_db_standalone-kasli_node1_with_edgecounters_20241014.py  kasli-soc-standalone_node1_with_edgecounters_en.json
src/Vivado/: install_config.txt
src/kasli_SD_card/: CONFIG.TXT
src/master_satelite/: kasli-soc-master.json  kasli-soc-satellite.json
